--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,1 +1,19 @@
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+
 /* You can add global styles to this file, and also import other style files */
+$light-grey: #6c7069;
+$green: #15a811;
+$yellow: #d8ce17;
+$white: #ffffff;
+$grey: #ffffffce;
+
+
+
+$heading1: 2rem;
+$heading2: 1.5rem;
+$heading3: 1rem;
+
+html, body { height: 100%; }
+body { margin: 0;  }
